<resources>
    <string name="app_name">VMApplication</string>
    <string name="email_id">Email ID :</string>
    <string name="id">ID :</string>
    <string name="name">Name :</string>
    <string name="MobNo">MobNo :</string>

    <string name="jobtitle">job Title :</string>
    <string name="favouritecolor">Favourite Color :</string>
    <string name="showdetails">ShowDetails</string>
    <string name="Cancel">Cancel
    </string>
    <string name="EmployeeDetails">Employee Details</string>
    <string name="capacity">Capacity</string>
    <string name="availability">Availability</string>
    <string name="RoomAvailability">Room Status</string>

    <string name="noConnection">No Internet Connection..Please try after sometime..</string>

</resources>