<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:adjustViewBounds="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/empCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="3dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorlightred"
            android:orientation="vertical">





                <TextView
                    android:id="@+id/SNoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="SL No"
                    android:layout_marginLeft="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/jobTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/jobtitle"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/email_id"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/mobile_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="Mobile No"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:textStyle="bold"
                android:weightSum="3"
                android:visibility="gone">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight=".5"
                    android:gravity="center_vertical"
                    android:text="@string/favouritecolor"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/favouriteColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:background="@color/colorAccent"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/capture"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="1dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/showdetails"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold" />






        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>