<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="8dp"
    android:layout_gravity="center"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/dilog_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/card_view_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/ic_baseline_person_24"
                android:scaleType="centerCrop" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_start_color"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">
            </LinearLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/jobTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/jobtitle"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/email_id"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mobile_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="Mobile No"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="Location"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="visible" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:background="@color/cardview_shadow_end_color"
                android:textStyle="bold"
                android:weightSum="3">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight=".5"
                    android:gravity="center_vertical"
                    android:text="@string/favouritecolor"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/favouriteColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <TextView
                android:id="@+id/cancel"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="1dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/Cancel"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold" />






        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>