<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" xmlns:card_view="http://schemas.android.com/tools"
    android:layout_marginTop="9dp"
    android:layout_marginBottom="9dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorlightred"
        android:visibility="visible"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        card_view:cardCornerRadius="10dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/layoutImageProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<ImageView
                android:id="@+id/aval_img"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@color/green"
                android:scaleType="fitXY" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorlightred"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/room_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/name"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/capacity"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/aval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/availability"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
